@@ -1,3 +1,8 @@
+2004-10-11  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* glines.c: Use the new games_gridframe_set_padding API to get the
+	borders right. Also simplify the code. Fixes bug #154982.
+
 2004-10-09  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* glines.c: Make sure that calling show_scores from the menu
